--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "gimmea": "^1.3.0",
+    "jsdom": "^9.8.3",
     "knex-cleaner": "^1.1.3",
     "redux": "^3.6.0",
     "redux-mock-store": "^1.2.1",
